# Stock-Market-Prediction

./: .env.example  .gitignore  Makefile  README.md  index.html  package-lock.json  plan.md  pyproject.toml  requirements.txt
agents/: supervisor.yaml  supervisor_persona.md
frontend/: package-lock.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ChatPanel.tsx  DebateModal.tsx  DebatePanel.tsx  MentionInput.tsx  PortfolioPanel.tsx  SessionManager.tsx  StockSearch.tsx  TickerAutocomplete.tsx
portfolioiq/: __init__.py  __main__.py  agent.py  chat_store.py  config.py  llm.py  server.py  sessions.py  state.py
portfolioiq/data/: __init__.py  provider.py
portfolioiq/graphs/: __init__.py  analysis.py  debate.py  news.py  supervisor.py
portfolioiq/memory/: __init__.py  long_term.py
portfolioiq/ml/: __init__.py  features.py  predict.py  train.py
portfolioiq/tools/: __init__.py  calculate_indicators.py  financial.py  get_earnings.py  get_fundamentals.py  get_history.py  news_search.py  registry.py  stock_lookup.py
tests/: test_tools.py
